Today I fixed up my titles with text-align and images. Also adding a border to cover up white spots. In addition to that I started working with the <hr> HTML function to start building my timeline.

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,24 @@ html{
 }
 
 .firstimage{
-    max-width: 200%;
-    height: auto;
+    text-align: center;
 }
 
+.firstimage img{
+    width: 1000px;
+    height: auto;
+    border: 4px solid #080F0F;
+    border-radius: 25px;
+}
+
+.title{
+    text-align: center;
+    font-size: x-large;
+}
+
+.line{
+    border-left: 20px solid #a52422
+}
 
 
 
